--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -44,6 +44,7 @@ body
     padding-top: 1.5em
     padding-bottom: 1.5em
     border-top: 2px solid $orange
+    border-top: none
     position: fixed
     width: 100%
     bottom: 0
