adjusted media query

--- a/styles/_nav.sass
+++ b/styles/_nav.sass
@@ -67,6 +67,9 @@ nav
           display: block
           &:hover
             background-color: rgba(0,0,0,0.5)
+  @include mobile-screens
+    .menu-toggle.on
+      left: 91vw
 .menu-section
   &.on
     z-index: 10
