--- a/styles/_variables.sass
+++ b/styles/_variables.sass
@@ -61,7 +61,7 @@ $right-background: #FA824B
 
 // Media Queries
 @mixin mobile-screens()
-  @media only screen and (max-width: 414px)
+  @media only screen and (min-device-width: 375px) and (max-device-width: 736px)
     @content
 
 // font
