--- a/styles/_header.sass
+++ b/styles/_header.sass
@@ -11,9 +11,6 @@ header
     background: url(../assets/images/background-md.jpg) center center no-repeat fixed
       size: cover
     transition: filter 1s
-    @include mobile-screens
-      background: url(../assets/images/background-sm.jpg) center center no-repeat fixed
-        size: cover
   .content
     #main-header
       position: absolute
@@ -33,3 +30,12 @@ header
         bottom: -4em
         left: 50%
         transform: translateX(-50%)
+  @include mobile-screens
+    .header
+      background: url(../assets/images/background-sm.jpg) center center no-repeat fixed
+        size: cover
+    .content
+      #main-header
+        top: 20vh
+        button
+          bottom: -1em
