changed fixed to scroll

--- a/styles/_header.sass
+++ b/styles/_header.sass
@@ -32,7 +32,7 @@ header
         transform: translateX(-50%)
   @include mobile-screens
     .header
-      background: url(../assets/images/background-sm.jpg) center center no-repeat fixed
+      background: url(../assets/images/background-sm.jpg) center center no-repeat scroll
         size: cover
     .content
       #main-header
