--- a/styles/_about.sass
+++ b/styles/_about.sass
@@ -13,8 +13,10 @@
   p
     font-size: 120%
   background:
-    image: linear-gradient(rgba(203, 203, 230, 0.5) 100%, transparent), url('https://images.unsplash.com/photo-1495316331924-236b755286eb?dpr=1&auto=format&fit=crop&w=1500&h=998&q=80&cs=tinysrgb&crop=&bg=')
+    image: linear-gradient(rgba(203, 203, 230, 0.5) 100%, transparent), url('https://images.unsplash.com/photo-1495316331924-236b755286eb?dpr=1&auto=format&fit=crop&w=415&q=80&cs=tinysrgb&crop=&bg=')
     position: center
     attachment: fixed
     repeat: no-repeat
     size: cover
+  @include mobile-screens
+    background-attachment: scroll
