--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -41,6 +41,7 @@ body
   footer
     hr
       max-width: 80%
+      border-top: none
     padding-top: 1.5em
     padding-bottom: 1.5em
     border-top: 2px solid $orange
