added attachement scroll;

--- a/styles/_secondary.sass
+++ b/styles/_secondary.sass
@@ -23,3 +23,5 @@
       top: 3em !important
       transform: scale(1.1)
       transition: transform .8s ease-out
+  @include mobile-screens
+    background-attachment: scroll
