--- a/styles/_header.sass
+++ b/styles/_header.sass
@@ -39,3 +39,12 @@ header
         top: 20vh
         button
           bottom: -1em
+  @include tablets
+    .header
+      background: url(../assets/images/background-sm.jpg) center center no-repeat scroll
+        size: cover
+    .content
+      #main-header
+        top: 20vh
+        button
+          bottom: -1em
