changes to images to tablet

--- a/styles/_about.sass
+++ b/styles/_about.sass
@@ -20,3 +20,5 @@
     size: cover
   @include mobile-screens
     background-attachment: scroll
+  @include tablets
+    background-attachment: scroll
