--- a/styles/_secondary.sass
+++ b/styles/_secondary.sass
@@ -25,3 +25,5 @@
       transition: transform .8s ease-out
   @include mobile-screens
     background-attachment: scroll
+  @include tablets
+    background-attachment: scroll
