added link to contact form

--- a/index.jade
+++ b/index.jade
@@ -42,7 +42,7 @@ html(lang="en")
           h1.main-header 
             | Working with Small Businesses to Create & Build Digital Products.
             .small Techie Dodo Can Help You Be Adaptable. Let's Talk.
-          button.btn.btn-primary.btn-lg Lets Get Started
+          a#button.btn.btn-primary.btn-lg(href='#contact' type='button') Lets Get Started
         
     section.services
       a(name='services')
