--- a/styles/_header.sass
+++ b/styles/_header.sass
@@ -25,7 +25,7 @@ header
           text-shadow: 2px 2px 1px #fb9d45
           color: white
       transition: opacity .5s
-      button
+      #button
         position: relative
         bottom: -4em
         left: 50%
@@ -37,7 +37,7 @@ header
     .content
       #main-header
         top: 20vh
-        button
+        #button
           bottom: -1em
   @include tablets
     .header
@@ -46,5 +46,5 @@ header
     .content
       #main-header
         top: 20vh
-        button
+        #button
           bottom: -1em
